@@ -20,14 +20,16 @@ package bisq.updater;
 import bisq.application.ApplicationService;
 import bisq.bonded_roles.release.ReleaseNotification;
 import bisq.bonded_roles.release.ReleaseNotificationsService;
+import bisq.common.application.ApplicationVersion;
 import bisq.common.application.Service;
+import bisq.common.file.FileUtils;
 import bisq.common.observable.Observable;
+import bisq.common.observable.Pin;
 import bisq.common.observable.collection.CollectionObserver;
 import bisq.common.observable.collection.ObservableArray;
+import bisq.common.platform.PlatformUtils;
+import bisq.common.platform.Version;
 import bisq.common.threading.ExecutorFactory;
-import bisq.common.util.FileUtils;
-import bisq.common.util.OsUtils;
-import bisq.common.util.Version;
 import bisq.settings.CookieKey;
 import bisq.settings.SettingsService;
 import com.google.common.annotations.VisibleForTesting;
@@ -36,6 +38,7 @@ import lombok.extern.slf4j.Slf4j;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Path;
 import java.util.List;
@@ -43,8 +46,7 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
 import java.util.concurrent.ExecutorService;
 
-import static bisq.updater.UpdaterUtils.UPDATES_DIR;
-import static bisq.updater.UpdaterUtils.VERSION_FILE_NAME;
+import static bisq.updater.UpdaterUtils.*;
 import static com.google.common.base.Preconditions.checkArgument;
 
 @Slf4j
@@ -57,18 +59,16 @@ public class UpdaterService implements Service {
     private final ObservableArray<DownloadItem> downloadItemList = new ObservableArray<>();
     private final ApplicationService.Config config;
     private ExecutorService executorService;
+    private final CollectionObserver<ReleaseNotification> observer;
+    private Pin releaseNotificationsPin;
 
     public UpdaterService(ApplicationService.Config config, SettingsService settingsService, ReleaseNotificationsService releaseNotificationsService) {
         this.config = config;
 
         this.settingsService = settingsService;
         this.releaseNotificationsService = releaseNotificationsService;
-    }
 
-    @Override
-    public CompletableFuture<Boolean> initialize() {
-        log.info("initialize");
-        releaseNotificationsService.getReleaseNotifications().addObserver(new CollectionObserver<>() {
+        observer = new CollectionObserver<>() {
             @Override
             public void add(ReleaseNotification releaseNotification) {
                 onNewReleaseNotificationAdded(releaseNotification);
@@ -93,7 +93,14 @@ public class UpdaterService implements Service {
             public void clear() {
                 releaseNotification.set(null);
             }
-        });
+        };
+    }
+
+    @Override
+    public CompletableFuture<Boolean> initialize() {
+        log.info("initialize");
+
+        releaseNotificationsPin = releaseNotificationsService.getReleaseNotifications().addObserver(observer);
         return CompletableFuture.completedFuture(true);
     }
 
@@ -112,35 +119,11 @@ public class UpdaterService implements Service {
     // API
     ///////////////////////////////////////////////////////////////////////////////////////////////////
 
-    public void onNewReleaseNotificationAdded(ReleaseNotification releaseNotification) {
-        if (releaseNotification == null) {
-            log.warn("releaseNotification is null");
-            return;
+    public void reapplyAllReleaseNotifications() {
+        if (releaseNotificationsPin != null) {
+            releaseNotificationsPin.unbind();
         }
-
-        Version newVersion = releaseNotification.getVersion();
-        Version installedVersion = config.getVersion();
-        if (newVersion.belowOrEqual(installedVersion)) {
-            log.debug("Our installed version is the same or higher as the version of the new releaseNotification.");
-            return;
-        }
-
-        if (this.releaseNotification.get() != null && newVersion.belowOrEqual(this.releaseNotification.get().getVersion())) {
-            log.debug("The version of our existing releaseNotification is the same or higher as the version of the new releaseNotification.");
-            return;
-        }
-
-        boolean ignoreVersion = settingsService.getCookie().asBoolean(CookieKey.IGNORE_VERSION, newVersion.toString()).orElse(false);
-        if (ignoreVersion) {
-            log.debug("We had clicked ignore for that version");
-            return;
-        }
-        boolean notifyForPreRelease = settingsService.getCookie().asBoolean(CookieKey.NOTIFY_FOR_PRE_RELEASE).orElse(false);
-        if (releaseNotification.isPreRelease() && !notifyForPreRelease) {
-            log.debug("This is a pre-release and we have not enabled to get notified for pre-releases.");
-            return;
-        }
-        this.releaseNotification.set(releaseNotification);
+        releaseNotificationsPin = releaseNotificationsService.getReleaseNotifications().addObserver(observer);
     }
 
     public CompletableFuture<Void> downloadAndVerify() throws IOException {
@@ -151,7 +134,7 @@ public class UpdaterService implements Service {
         checkArgument(!keyIds.isEmpty());
 
         String downloadFileName = UpdaterUtils.getDownloadFileName(version, isLauncherUpdate);
-        String destinationDirectory = isLauncherUpdate ? OsUtils.getDownloadOfHomeDir() :
+        String destinationDirectory = isLauncherUpdate ? PlatformUtils.getDownloadOfHomeDir() :
                 Path.of(baseDir, UPDATES_DIR, version).toString();
         FileUtils.makeDirs(new File(destinationDirectory));
         downloadItemList.setAll(DownloadItem.createDescriptorList(version, destinationDirectory, downloadFileName, keyIds));
@@ -174,6 +157,38 @@ public class UpdaterService implements Service {
     // Private/package static
     ///////////////////////////////////////////////////////////////////////////////////////////////////
 
+    private void onNewReleaseNotificationAdded(ReleaseNotification releaseNotification) {
+        if (releaseNotification == null) {
+            log.warn("releaseNotification is null");
+            return;
+        }
+
+        Version newVersion = releaseNotification.getReleaseVersion();
+        Version installedVersion = ApplicationVersion.getVersion();
+        if (newVersion.belowOrEqual(installedVersion)) {
+            log.debug("Our installed version is the same or higher as the version of the new releaseNotification.");
+            return;
+        }
+
+        if (this.releaseNotification.get() != null && newVersion.belowOrEqual(this.releaseNotification.get().getReleaseVersion())) {
+            log.debug("The version of our existing releaseNotification is the same or higher as the version of the new releaseNotification.");
+            return;
+        }
+
+        boolean ignoreVersion = settingsService.getCookie().asBoolean(CookieKey.IGNORE_VERSION, newVersion.toString()).orElse(false);
+        if (ignoreVersion) {
+            log.debug("We had clicked ignore for that version");
+            return;
+        }
+        boolean notifyForPreRelease = settingsService.getCookie().asBoolean(CookieKey.NOTIFY_FOR_PRE_RELEASE).orElse(false);
+        if (releaseNotification.isPreRelease() && !notifyForPreRelease) {
+            log.debug("This is a pre-release and we have not enabled to get notified for pre-releases.");
+            return;
+        }
+        this.releaseNotification.set(releaseNotification);
+    }
+
+
     private static CompletableFuture<Void> downloadAndVerify(String version,
                                                              boolean isLauncherUpdate,
                                                              List<DownloadItem> downloadItemList,
@@ -193,7 +208,8 @@ public class UpdaterService implements Service {
             for (DownloadItem downloadItem : downloadItemList) {
                 try {
                     log.info("Download {}", downloadItem);
-                    FileUtils.downloadFile(new URL(downloadItem.getUrlPath()), downloadItem.getDestinationFile(), downloadItem.getProgress());
+                    URL url = URI.create(downloadItem.getUrlPath()).toURL();
+                    FileUtils.downloadFile(url, downloadItem.getDestinationFile(), downloadItem.getProgress());
                 } catch (Exception e) {
                     e.printStackTrace();
                     throw new RuntimeException(e);
