@@ -29,6 +29,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.Proxy;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.Optional;
@@ -70,13 +71,14 @@ public class ClearNetHttpClient extends BaseHttpClient {
                             return false;
                         }
                     } catch (IOException e) {
-                        throw new RuntimeException(e);
+                        log.error("Error at shutdown {}", ExceptionUtil.getRootCauseMessage(e));
+                        return false;
                     }
                 }, ExecutorFactory.newSingleThreadExecutor("ClearNetHttpClient-shutdown"))
                 .orTimeout(500, TimeUnit.MILLISECONDS)
                 .whenComplete((result, throwable) -> {
                     if (throwable != null) {
-                        log.warn("Error at shutdown: {}", ExceptionUtil.getMessageOrToString(throwable));
+                        log.warn("Error at shutdown: {}", ExceptionUtil.getRootCauseMessage(throwable));
                     }
                 });
         connection = null;
@@ -92,7 +94,7 @@ public class ClearNetHttpClient extends BaseHttpClient {
         log.debug("requestWithoutProxy: URL={}, param={}, httpMethod={}", baseUrl, param, httpMethod);
         String spec = httpMethod == HttpMethod.GET ? baseUrl + "/" + param : baseUrl;
         try {
-            URL url = new URL(spec);
+            URL url = new URI(spec).toURL();
             if (proxy == null) {
                 connection = (HttpURLConnection) url.openConnection();
             } else {
@@ -145,7 +147,7 @@ public class ClearNetHttpClient extends BaseHttpClient {
                 throw new HttpException("Request failed", responseCode);
             }
         } catch (Exception e) {
-            String message = "Request to " + baseUrl + "/" + param + " failed with error: " + ExceptionUtil.getMessageOrToString(e);
+            String message = "Request to " + baseUrl + "/" + param + " failed with error: " + ExceptionUtil.getRootCauseMessage(e);
             throw new IOException(message, e);
         } finally {
             try {
